<resources>
    <string name="app_name">ProgMobProject</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="credit">Paramètres</string>
    <string name="simple">Simple</string>
    <string name="moyen">Moyen</string>
    <string name="difficult">Difficile</string>
    <string name="title_activity_quizz">Quizz</string>
    <string name="title_activity_ball">Ball game</string>
    <string name="great_response_quizz">Bonne réponse !</string>
    <string name="bad_response_quizz">Mauvaise réponse !</string>
    <string name="next_question">Question suivante</string>
    <string name="valid_button_text">Valider</string>
    <string name="back_menu">Retour au menu</string>
    <string name="back_multiplayer">Retour au multiplayer</string>
    <string name="discover">Rechercher</string>
    <string name="startGame">Lancer une partie</string>
    <string name="tuto">Tutorial</string>
    <string name="waitingResultat">En attente du résultat de l\'adversaire</string>
    <string name="superiorResultat">Victoire !</string>
    <string name="inferiorResultat">Défaite !</string>
    <string name="equalResultat">Égalité !</string>
    <string name="discoverOn">Recherche de Joueurs</string>
    <string name="discoverOff">Lancer Recherche</string>
    <string name="discoverPb">La recherche n\'a pas aboutie</string>
    <string name="songEffect">Activer les effets sonores :</string>
    <string name="bestScore">Meilleur Score</string>
    <string name="socreBallGame">Score jeux balls : </string>
    <string name="scoreCompassGame">Score jeux compass : </string>
    <string name="scoreQuizz">Score jeux quizz :  </string>
    <string name="scoreFinal">Score Final : </string>
    <string name="creditName">Credit</string>
    <string name="esir">Projet ESIR 2018-2019</string>
    <string name="dev">Développeurs</string>
    <string name="julien">Guépéroux Juilen </string>
    <string name="thomas">Stéphant Thomas</string>
</resources>
